$Id: NEWS,v 1.429 2003-04-30 15:49:17 castaglia Exp $

CVS
---------------------------------
- Bug 1828 - mod_sql can only find mysql.sock if in /tmp.  This was caused
  by the fact that mod_sql_mysql did not load/read the MySQL .cnf
  configuration files.  Now, when starting, mod_sql_mysql will read .cnf
  files for "client" sections.
- Bug 1960 - Add removed file size by DELE command to xferlog.
- Bug 1967 - Add display of uptime to ftpwho, ftptop.
- Added AnonRejectPasswords directive.
- Added ftpshut -D command-line option, for deleting the ftpshut shutdown
  file.
- Bug 1972 - %T not correctly shows time at performance of a command "rename".
  This was due to improper use of uninitialized data.
- Bug 1794 - Scoreboard format changes.
- Bug 1979 - Add TLSTimeoutHandshake directive.  This adds a directive to
  configure a timer when SSL/TLS handshakes are occurring, to prevent
  a malicious client from attempting to DOS a TLS-enabled server.  The default
  timeout is 5 minutes.
- Bug 1869 - Add option "-S/--server" to ftpcount, ftptop, ftpwho.  This
  option can be used to specify a ServerName; the utilities will then
  display information for that specific server.
- Bug 1980 - Login with incorrect password possible when using mod_radius.
  This was caused by the retaining of the OK state when a user authenticated
  via RADIUS, but the login process later fails (e.g. home directory
  inaccessible or something similar); subsequent logging in as a different
  user would succeed because the OK flag was not cleared.
- Added contrib module mod_ifsession-0.9rc6.
- Bug 1932 - Make Max* checks a PASS POST_CMD handler.  One of the consequences
  of this change is that the Max* limits will always be enforced after the
  PASS command has been sent, not after the USER command (as used to be done).
  Also, MaxHostsPerUser and MaxClientsPerUser limits will be determined using
  the locally resolved username, not using any user aliases.