@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.429 2003-04-30 15:49:17 castaglia Exp $
+$Id: NEWS,v 1.430 2003-05-14 04:43:25 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -126,6 +126,8 @@ CVS
   was caused by mod_auth_file's returning of an ERROR condition, rather than
   DECLINED, when the module could not obtain the user's encrypted password
   for verification.
+- Bug 2047 - 1024 or more chars in .ftpaccess causes lockup.  Certain conditions
+  allowed for parsing of configuration files to enter an infinite loop.
 
 1.2.8 - Released 04-Mar-2003
 ---------------------------------
